Replace disk delete policies with a diskSpacePercentThreshold system property